# krewetuhistory

./: .gitignore  README.md  netlify.toml
historical_marker_site/: README.md  app.js  carousel-mode.js  carousel.html  carousel.js  carousel.webmanifest  explore.html  home.js  index.html  pwa.js  site-config.js  site-data.js  story.js  (+3 more)
historical_marker_workflow/: README.md  pyproject.toml
historical_marker_workflow/sql/: supabase_reactions.sql  supabase_security_hardening.sql  supabase_stories_public.sql
historical_marker_workflow/src/marker_workflow/: __init__.py  cli.py  config.py  models.py  utils.py
historical_marker_workflow/src/marker_workflow/adapters/: __init__.py  ai_client.py  airtable_client.py  box_client.py  extractor_registry.py  supabase_client.py
historical_marker_workflow/src/marker_workflow/prompts/: classify.txt  draft_carousel_copy.txt  draft_story.txt  moderate.txt  review_dossier.txt
historical_marker_workflow/src/marker_workflow/services/: __init__.py  airtable_click_sync.py  airtable_editorial.py  audit.py  duplicate_detector.py  extractor.py  generator.py  grouper.py  poller.py  reconcile.py  reviewer.py  router.py  site_builder.py  stager.py  supabase_sync.py
historical_marker_workflow/src/marker_workflow/templates/: review_summary.md.j2  story_package.md.j2
historical_marker_workflow/tests/: __init__.py  support.py  test_airtable_click_sync.py  test_airtable_client.py  test_airtable_editorial.py  test_config.py  test_duplicates.py  test_grouping.py  test_review_engine.py  test_router.py  test_site_builder.py  test_supabase_sync.py
(+15 files in other folders)
