[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "historical-marker-workflow"
version = "0.1.0"
description = "Box-centered intake automation for a digital historical marker workflow."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pypdfium2>=4.30.0",
]

[project.scripts]
marker-workflow = "marker_workflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
